env vars working, trying to fix button spacing on cal add success view

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -66,6 +66,10 @@ input[type='number'] {
 	display: none;
 }
 
+button.success-view {
+	margin-right: 4px;
+}
+
 .invisible {
 	display: none;
 }
